--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
         { nom: "Musée de la Bande Dessinée", coords: [50.8505, 4.359], type: "culture" },
         { nom: "Design Museum Brussels", coords: [50.8943, 4.3435], type: "culture" },
         { nom: "Parlamentarium - Musée du Parlement européen", coords: [50.8385, 4.3746], type: "culture" },
-        { nom: "Maison Autrique", coords: [50.8671, 4.3674], type: "architecture" }
+        { nom: "Maison Autrique", coords: [50.8671, 4.3674], type: "architecture" },
+        { nom: "The World of Banksy - Bruxelles", coords: [50.8471, 4.3517], type: "culture" }
       ];
 
       const markerCluster = L.markerClusterGroup();
